// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Photoshop renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-photoshop photoshop-picker"
  >
    <div
      class="rc-photoshop__head"
    >
      Color Picker
    </div>
    <div
      class="rc-photoshop__body"
    >
      <div
        class="rc-photoshop__saturation"
      >
        <div
          class="rc-saturation"
          style="background: rgb(43, 0, 255);"
        >
          <div
            class="rc-saturation__white"
            style="background: linear-gradient(to right, rgb(255, 255, 255), rgba(255, 255, 255, 0));"
          >
            <div
              class="rc-saturation__black"
              style="background: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));"
            />
            <div
              class="rc-saturation__pointer"
              style="top: 70%; left: 66.66666666666667%;"
            >
              <div
                class="rc-photoshop__pointer-circle"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="rc-photoshop__hue"
      >
        <div
          class="rc-hue-control rc-hue-control--vertical"
        >
          <div
            class="rc-hue-control__container"
            style="background: linear-gradient(to top, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
          >
            <div
              class="rc-hue-control__pointer"
              style="left: 0px; top: 30.55555555555557%;"
            >
              <div
                class="rc-photoshop__pointer"
              >
                <div
                  class="rc-photoshop__pointer-side rc-photoshop__pointer-side--left"
                >
                  <div
                    class="rc-photoshop__pointer-fill"
                  />
                </div>
                <div
                  class="rc-photoshop__pointer-side rc-photoshop__pointer-side--right"
                >
                  <div
                    class="rc-photoshop__pointer-fill"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rc-photoshop__controls"
      >
        <div
          class="rc-photoshop__top"
        >
          <div
            class="rc-photoshop__previews"
          >
            <div
              class="rc-photoshop__previews"
            >
              <div
                class="rc-photoshop__preview-label"
              >
                new
              </div>
              <div
                class="rc-photoshop__preview-swatches"
              >
                <div
                  class="rc-photoshop__preview-swatch rc-photoshop__preview-swatch--new"
                  style="background: rgb(34, 25, 77);"
                />
                <div
                  class="rc-photoshop__preview-swatch rc-photoshop__preview-swatch--current"
                  style="background: rgb(34, 25, 77);"
                />
              </div>
              <div
                class="rc-photoshop__preview-label"
              >
                current
              </div>
            </div>
          </div>
          <div
            class="rc-photoshop__actions"
          >
            <div
              class="rc-photoshop__button rc-photoshop__button--active"
            >
              OK
            </div>
            <div
              class="rc-photoshop__button"
            >
              Cancel
            </div>
            <div
              class="rc-photoshop__fields"
            >
              <div
                class="rc-photoshop__field rc-photoshop__field--rgb"
              >
                <div
                  class="rc-editable-input"
                >
                  <input
                    class="rc-editable-input__input"
                    id="rc-editable-input-1"
                    spellcheck="false"
                    value="250"
                  />
                  <label
                    class="rc-editable-input__label"
                    for="rc-editable-input-1"
                  >
                    h
                  </label>
                </div>
              </div>
              <div
                class="rc-photoshop__field rc-photoshop__field--rgb"
              >
                <div
                  class="rc-editable-input"
                >
                  <input
                    class="rc-editable-input__input"
                    id="rc-editable-input-2"
                    spellcheck="false"
                    value="67"
                  />
                  <label
                    class="rc-editable-input__label"
                    for="rc-editable-input-2"
                  >
                    s
                  </label>
                </div>
              </div>
              <div
                class="rc-photoshop__field rc-photoshop__field--rgb"
              >
                <div
                  class="rc-editable-input"
                >
                  <input
                    class="rc-editable-input__input"
                    id="rc-editable-input-3"
                    spellcheck="false"
                    value="30"
                  />
                  <label
                    class="rc-editable-input__label"
                    for="rc-editable-input-3"
                  >
                    v
                  </label>
                </div>
              </div>
              <div
                class="rc-photoshop__divider"
              />
              <div
                class="rc-photoshop__field rc-photoshop__field--rgb"
              >
                <div
                  class="rc-editable-input"
                >
                  <input
                    class="rc-editable-input__input"
                    id="rc-editable-input-4"
                    spellcheck="false"
                    value="34"
                  />
                  <label
                    class="rc-editable-input__label"
                    for="rc-editable-input-4"
                  >
                    r
                  </label>
                </div>
              </div>
              <div
                class="rc-photoshop__field rc-photoshop__field--rgb"
              >
                <div
                  class="rc-editable-input"
                >
                  <input
                    class="rc-editable-input__input"
                    id="rc-editable-input-5"
                    spellcheck="false"
                    value="25"
                  />
                  <label
                    class="rc-editable-input__label"
                    for="rc-editable-input-5"
                  >
                    g
                  </label>
                </div>
              </div>
              <div
                class="rc-photoshop__field rc-photoshop__field--rgb"
              >
                <div
                  class="rc-editable-input"
                >
                  <input
                    class="rc-editable-input__input"
                    id="rc-editable-input-6"
                    spellcheck="false"
                    value="77"
                  />
                  <label
                    class="rc-editable-input__label"
                    for="rc-editable-input-6"
                  >
                    b
                  </label>
                </div>
              </div>
              <div
                class="rc-photoshop__divider"
              />
              <div
                class="rc-photoshop__field rc-photoshop__field--hex"
              >
                <div
                  class="rc-editable-input"
                >
                  <input
                    class="rc-editable-input__input"
                    id="rc-editable-input-7"
                    spellcheck="false"
                    value="22194D"
                  />
                  <label
                    class="rc-editable-input__label"
                    for="rc-editable-input-7"
                  >
                    #
                  </label>
                </div>
              </div>
              <div
                class="rc-photoshop__field-symbols"
              >
                <div
                  class="rc-photoshop__field-symbol"
                >
                  °
                </div>
                <div
                  class="rc-photoshop__field-symbol"
                >
                  %
                </div>
                <div
                  class="rc-photoshop__field-symbol"
                >
                  %
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PhotoshopButton renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-photoshop__button"
  >
    accept
  </div>
</DocumentFragment>
`;

exports[`PhotoshopFields renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-photoshop__fields"
  >
    <div
      class="rc-photoshop__field rc-photoshop__field--rgb"
    >
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-15"
          spellcheck="false"
          value="0"
        />
        <label
          class="rc-editable-input__label"
          for="rc-editable-input-15"
        >
          h
        </label>
      </div>
    </div>
    <div
      class="rc-photoshop__field rc-photoshop__field--rgb"
    >
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-16"
          spellcheck="false"
          value="100"
        />
        <label
          class="rc-editable-input__label"
          for="rc-editable-input-16"
        >
          s
        </label>
      </div>
    </div>
    <div
      class="rc-photoshop__field rc-photoshop__field--rgb"
    >
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-17"
          spellcheck="false"
          value="100"
        />
        <label
          class="rc-editable-input__label"
          for="rc-editable-input-17"
        >
          v
        </label>
      </div>
    </div>
    <div
      class="rc-photoshop__divider"
    />
    <div
      class="rc-photoshop__field rc-photoshop__field--rgb"
    >
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-18"
          spellcheck="false"
          value="255"
        />
        <label
          class="rc-editable-input__label"
          for="rc-editable-input-18"
        >
          r
        </label>
      </div>
    </div>
    <div
      class="rc-photoshop__field rc-photoshop__field--rgb"
    >
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-19"
          spellcheck="false"
          value="0"
        />
        <label
          class="rc-editable-input__label"
          for="rc-editable-input-19"
        >
          g
        </label>
      </div>
    </div>
    <div
      class="rc-photoshop__field rc-photoshop__field--rgb"
    >
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-20"
          spellcheck="false"
          value="0"
        />
        <label
          class="rc-editable-input__label"
          for="rc-editable-input-20"
        >
          b
        </label>
      </div>
    </div>
    <div
      class="rc-photoshop__divider"
    />
    <div
      class="rc-photoshop__field rc-photoshop__field--hex"
    >
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-21"
          spellcheck="false"
          value="FF0000"
        />
        <label
          class="rc-editable-input__label"
          for="rc-editable-input-21"
        >
          #
        </label>
      </div>
    </div>
    <div
      class="rc-photoshop__field-symbols"
    >
      <div
        class="rc-photoshop__field-symbol"
      >
        °
      </div>
      <div
        class="rc-photoshop__field-symbol"
      >
        %
      </div>
      <div
        class="rc-photoshop__field-symbol"
      >
        %
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PhotoshopPointer renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-photoshop__pointer"
  >
    <div
      class="rc-photoshop__pointer-side rc-photoshop__pointer-side--left"
    >
      <div
        class="rc-photoshop__pointer-fill"
      />
    </div>
    <div
      class="rc-photoshop__pointer-side rc-photoshop__pointer-side--right"
    >
      <div
        class="rc-photoshop__pointer-fill"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PhotoshopPointerCircle renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-photoshop__pointer-circle"
  />
</DocumentFragment>
`;

exports[`PhotoshopPreviews renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-photoshop__previews"
  >
    <div
      class="rc-photoshop__preview-label"
    >
      new
    </div>
    <div
      class="rc-photoshop__preview-swatches"
    >
      <div
        class="rc-photoshop__preview-swatch rc-photoshop__preview-swatch--new"
        style="background: rgb(255, 0, 0);"
      />
      <div
        class="rc-photoshop__preview-swatch rc-photoshop__preview-swatch--current"
        style="background: rgb(174, 238, 0);"
      />
    </div>
    <div
      class="rc-photoshop__preview-label"
    >
      current
    </div>
  </div>
</DocumentFragment>
`;
